# y4

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  justfile  rust-toolchain.toml  unified-toolkit-pin.toml
.claude/: settings.json
.claude-memories/: MEMORY.md  feedback_adsmt_testing_channel_pin.md  feedback_adsmt_v1_verification_redesign.md  wavetensor_terms.md  y4_basics.md  y4_build_decisions.md  y4_canonical_doc.md  y4_drivers_and_guest_plan.md  y4_formal_first.md  y4_ipc_alloc_preflight.md  y4_pending_topics.md  y4_reuse_manifest.md  y4_wavetensor_relation.md
.claude-notes/: README.md  amd-v-verified-survey.md
.claude-notes/_completed/: ipc-and-alloc.md
.claude-notes/trackers/: README.md  adsmt-integration-tracker.md  av-proof-body-tracker.md  power-paper-venue-tracker.md  power-prior-art-ledger.md  power-threat-ledger.md  pr-verus-backend-tracker.md  smt-cross-validation-tracker.md  y4-sel4-integration-tracker.md
alloc/: Cargo.toml  README.md
alloc/src/: bump.rs  error.rs  hardened.rs  integrated.rs  lib.rs  page_backend.rs  scudo_ffi.rs  slab.rs  types.rs
boot/: README.md  justfile  limine.conf  limine.rules  sel4.rules  x86_64-debug.cmake
boot/scripts/: assemble-iso.sh  build-limine.sh
capsules/: Cargo.toml  README.md
capsules/src/: config_space.rs  error.rs  isolation.rs  lib.rs  pcie.rs  types.rs
docs/: amdv_safety.md  architecture.md  cpu_virt_compat.md  glossary.md  hiu_abi.md  lease_capability.md  licensing.md  phase_plan.md  power_arch.md  power_safety.md  sel4_fork_policy.md  verus_to_isabelle.md  verus_to_rocq.md  vmm_arch.md
ipc/: Cargo.toml  README.md
ipc/src/: error.rs  lib.rs  msgport.rs  scheme.rs  sel4_backend.rs  types.rs
kernel/: Cargo.toml  README.md  linker.ld
kernel/.cargo/: config.toml
kernel/src/: main.rs
proofs/: README.md
proofs/coq/: README.md  _CoqProject  justfile
proofs/coq/theories/: Placeholder.v
proofs/isabelle/: README.md  Y4.thy  Y4_AmdvSafety.thy  Y4_PowerSafety.thy
proofs/verus/: Cargo.toml  README.md  adsmt-emit.toml  justfile
proofs/verus/src/: error.rs  lib.rs
proofs/verus/src/alloc/: README.md  boundary.rs  mod.rs  refinement.rs  scudo.rs  slab.rs  state.rs
proofs/verus/src/amdv/: mod.rs
proofs/verus/src/amdv/lower/: intercept_floor.rs  mod.rs
proofs/verus/src/capsules/: README.md  cxl.rs  isolation.rs  mod.rs  pcie.rs  state.rs  usb.rs
proofs/verus/src/ipc/: README.md  consistency.rs  mod.rs  msgport.rs  refinement.rs  scheme.rs  state.rs
scudo-sys/: Cargo.toml  README.md  build.rs
scudo-sys/src/: lib.rs
scudo-sys/tests/: smoke.rs
tools/: scudo-fetch.sh  sel4-fork-apply.sh  sel4-fork-check.sh  sel4-mainline-export.sh
tools/git-hooks/: pre-commit
