# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 윤병익 (BYUNG-IK YEUN) and Y4 contributors

[package]
name = "y4-scudo-sys"
description = "FFI bindings for the LLVM scudo standalone hardened allocator (production backend for y4-alloc)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
links = "scudo_standalone"
build = "build.rs"

[lib]
name = "y4_scudo_sys"
path = "src/lib.rs"

[build-dependencies]
cc = "1.1"

[dependencies]

[lints]
workspace = true
